<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RapidTurns</string>
    <string name="title_section1">Citas</string>
    <string name="title_section2">Locales</string>
    <string name="title_section3">Favoritas</string>
    <string name="title_section4">Otros</string>
    <string name="title_section5">Empleados</string>
    <string name="title_section6">Servicios</string>
    <string name="title_section7">Otros</string>
    <string name="title_section8">Otros</string>
    <string name="salir">Salir</string>
    <string name="navigation_drawer_open">Abrir Panel de navegacion</string>
    <string name="navigation_drawer_close">Cerrar Panel de navegacion</string>
    <string name="action_example">ejemplo</string>
    <string name="action_settings">Opciones</string>
    <string name="citas">Aqui van las citas</string>
    <string name="peluquerias">Aqui van las peluquerias</string>
    <string name="favoritas">Aqui van las favoritas</string>
    <string name="otros">Aqui van los otros</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dialog_message">que paso</string>
    <string name="dialog_title">Datos erroneos</string>
    <string name="ok">Aceptar</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Logearse o Registrarse</string>
    <string name="action_sign_in_short">Loguearse</string>
    <string name="error_invalid_email">Email invalido</string>
    <string name="error_invalid_password">Contraseña es corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Campo Requerido</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="title_activity_empleado">Agregar Empleado</string>
    <string name="title_activity_servicio">Agregar Servicio</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="horario">Horario</string>
    <string name="add">Agregar</string>
    <string name="create">Crear</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="sex">Sexo: </string>
    <string name="monday">Lunes </string>
    <string name="saturday">Sabado </string>
    <string name="tuesday">Martes </string>
    <string name="wednesday">Miercoles </string>
    <string name="thursday">Jueves </string>
    <string name="friday">Viernes </string>
    <string name="from">De </string>
    <string name="to">Hasta </string>
    <string name="errordays">Seleccione almenos un dia </string>
    <string name="error_schedule">Horario invalido</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_ver_local">Ver Local</string>
    <string name="title_activity_reservar">Reservar</string>
    <string name="reservarCliente">Reservar con </string>
    <string name="reservarServicio">Reservar  </string>

</resources>
