<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cmovil.gr7.rapidturns.Empleado">

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/empleado_add_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >



            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/name"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1" android:singleLine="true" />

            <EditText android:id="@+id/lastname" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/lastname"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/lastname"
                android:imeOptions="actionUnspecified" android:inputType="text"
                android:maxLines="1" android:singleLine="true" />

            <EditText android:id="@+id/horario" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/horario"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/horario"
                android:imeOptions="actionUnspecified" android:inputType="text"
                android:maxLines="1" android:singleLine="true" />

            <Button android:id="@+id/create" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/create"
                android:textStyle="bold"
                android:onClick="add"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
