<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cmovil.gr7.rapidturns.Reservar">

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/empleado_add_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >



            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:imeActionLabel="@string/name"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1" android:singleLine="true" />


            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/horario"
                android:paddingTop="10dp" />


            <Spinner
                android:id="@+id/horario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <Button android:id="@+id/add" style="?android:textAppearanceSmall"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/title_activity_reservar"
                android:textStyle="bold"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
